prod-message/message/RCmaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-master-deployment
  namespace: message
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message
      rctype: master
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: message
        rctype: master
    spec:
      containers:
      - name: message
        image: rocketchat/rocket.chat:3.9.3
        ports:
        - containerPort: 8005
        readinessProbe:
          httpGet:
            path: /api/info
            port: 8005
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 25
          failureThreshold: 7
        resources:
          requests:
            memory: "3Gi"
            cpu: "900m"
          limits:
            memory: "3Gi"
            cpu: "950m"
