prod-message/message/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-deployment
  namespace: message
spec:
  replicas: 5
  selector:
    matchLabels:
      app: message
      rctype: worker
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: message
        rctype: worker
    spec:
      containers:
      - name: message
        image: rocketchat/rocket.chat:3.3.0
        ports:
        - containerPort: 8005
        readinessProbe:
          httpGet:
            path: /api/info
            port: 8005
          initialDelaySeconds: 20
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            memory: "2Gi"
            cpu: "900m"
          limits:
            memory: "2560Mi"
            cpu: "950m"
