prod-message/message/prometheus-export.yaml
# for prometheus metrics scraping
apiVersion: v1
kind: Service
metadata:
  name: messagepromy
  namespace: message
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "9458"
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 9458
  selector: 
    app: message
