prod-message/message/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: message
  namespace: message
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8005
  selector: 
    app: message
