prod-message/message/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: message-ingress
  namespace: message
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
  - hosts:
    - message.gccollab.ca
    secretName: message-secret
  rules:
  - host: message.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: message
          servicePort: 8005
